--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Production Tracking System</title>
+<title>Material Process Tracking</title>
 
 <style>
 body { font-family: Arial; background:#f4f6f8; padding:10px; }
 h2 { margin:5px 0; }
 .tabs button {
   width:100%;
-  padding:8px; margin:2px 0;
-  border:none; cursor:pointer;
+  padding:8px;
+  margin:2px 0;
+  border:none;
+  cursor:pointer;
   background:#d0d0d0;
 }
-.tabs button.active { background:#2c3e50; color:#fff; }
-.tab { display:none; background:#fff; padding:10px; margin-top:10px; }
-input, select, button { width:100%; padding:6px; margin:4px 0; }
-button { background:#2c3e50; color:#fff; border:none; cursor:pointer; }
-table { width:100%; border-collapse:collapse; margin-top:10px; }
-th, td { border:1px solid #ccc; padding:6px; text-align:center; }
-.action select, .action input { margin-bottom:4px; }
+.tabs button.active {
+  background:#2c3e50;
+  color:#fff;
+}
+.tab {
+  display:none;
+  background:#fff;
+  padding:10px;
+  margin-top:10px;
+}
+input, select, button {
+  width:100%;
+  padding:6px;
+  margin:4px 0;
+}
+button {
+  background:#2c3e50;
+  color:#fff;
+  border:none;
+  cursor:pointer;
+}
+table {
+  width:100%;
+  border-collapse:collapse;
+  margin-top:10px;
+}
+th, td {
+  border:1px solid #ccc;
+  padding:6px;
+  text-align:center;
+}
+.action select, .action input {
+  margin-bottom:4px;
+}
 </style>
 </head>
 
 <body>
 
-<h2>Production Tracking System</h2>
+<h2>Material Process Tracking System</h2>
 
 <div class="tabs">
   <button class="active" onclick="openTab('production',this)">Production</button>
@@ -43,14 +72,12 @@ th, td { border:1px solid #ccc; padding:6px; text-align:center; }
   <h3>Production Release</h3>
 
   <input id="part" placeholder="Part No">
-  <input id="batch" placeholder="Batch No">
   <input id="workOrder" placeholder="Work Order No">
   <input id="machine" placeholder="Machine No">
   <input id="qty" type="number" placeholder="Quantity">
   <input id="plant" placeholder="Plant">
   <input id="shift" placeholder="Shift">
-  <input id="grn" placeholder="GRN No">
-  <input id="coil" placeholder="Coil No">
+  <input id="grncoil" placeholder="GRN / Coil No">
 
   <label>Next Process</label>
   <select id="nextProcess">
@@ -83,56 +110,71 @@ th, td { border:1px solid #ccc; padding:6px; text-align:center; }
 <div id="qa" class="tab"><h3>QA</h3><table id="qaTable"></table></div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbysWhiSjMIvwICpiRvgYSst0qtey-piI_jnq-i7REDhthg4ogPVt6ZkjKeDqeW7Rj6D/exec";
+/* 🔴 YOUR NEW APPS SCRIPT URL */
+const API_URL =
+"https://script.google.com/macros/s/AKfycbwkqqSuT0h-59YaTWueNI05qExZ5w8BZI-E1R2LKMK43-7pedBEmCYb3BB_aE6zXi8h/exec";
 
-function openTab(id,btn){
-  document.querySelectorAll('.tab').forEach(t=>t.style.display="none");
-  document.getElementById(id).style.display="block";
-  document.querySelectorAll('.tabs button').forEach(b=>b.classList.remove("active"));
+/* TAB SWITCH */
+function openTab(id, btn) {
+  document.querySelectorAll('.tab').forEach(t => t.style.display = "none");
+  document.getElementById(id).style.display = "block";
+  document.querySelectorAll('.tabs button').forEach(b => b.classList.remove("active"));
   btn.classList.add("active");
-  if(id!=="production") loadProcess(capitalize(id), id+"Table");
+
+  if (id !== "production") {
+    loadProcess(capitalize(id), id + "Table");
+  }
 }
 
-function releaseProduction(){
-  fetch(API_URL,{
-    method:"POST",
-    mode:"no-cors",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
-      current_process:"Production",
+/* PRODUCTION RELEASE */
+function releaseProduction() {
+
+  fetch(API_URL, {
+    method: "POST",
+    mode: "no-cors",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      current_process: "Production",
       next_process: nextProcess.value,
+
       part_no: part.value,
-      batch_no: batch.value,
       work_order_no: workOrder.value,
       machine_no: machine.value,
       quantity: qty.value,
       plant: plant.value,
       shift: shift.value,
-      grn_no: grn.value,
-      coil_no: coil.value,
+      grn_coil_no: grncoil.value,
+
       handling_type: handlingType.value,
       handling_qty: handlingQty.value,
       handling_count: handlingCount.value,
-      status:"OK",
-      operator:"Production",
-      remarks:""
+
+      status: "OK",
+      operator: "Production",
+      remarks: ""
     })
   });
-  alert("Released to "+nextProcess.value);
+
+  alert("Released to " + nextProcess.value);
 }
 
-function loadProcess(process, tableId){
-  fetch(API_URL+"?process="+process)
-    .then(r=>r.json())
-    .then(rows=>{
-      const table=document.getElementById(tableId);
-      table.innerHTML="<tr><th>Batch</th><th>Part</th><th>Qty</th><th>Action</th></tr>";
-      rows.forEach(r=>{
-        const tr=document.createElement("tr");
-        tr.innerHTML=`
-          <td>${r.Batch_No}</td>
+/* LOAD DATA FROM EXCEL */
+function loadProcess(process, tableId) {
+
+  fetch(API_URL + "?process=" + process)
+    .then(r => r.json())
+    .then(rows => {
+
+      const table = document.getElementById(tableId);
+      table.innerHTML =
+        "<tr><th>Part</th><th>Qty</th><th>GRN/Coil</th><th>Action</th></tr>";
+
+      rows.forEach(r => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
           <td>${r.Part_No}</td>
           <td>${r.Quantity}</td>
+          <td>${r.GRN_Coil_No}</td>
           <td class="action">
             <select class="nextP">
               <option>Cleaning</option>
@@ -145,62 +187,83 @@ function loadProcess(process, tableId){
             <input class="remark" placeholder="Remark (mandatory)">
             <button onclick="processOK(this,'${process}')">OK</button>
             <button onclick="processNG(this,'${process}')">NG</button>
-          </td>`;
+          </td>
+        `;
         table.appendChild(tr);
       });
     });
 }
 
-function processOK(btn,current){
-  const row=btn.parentElement.parentElement;
-  const batch=row.children[0].innerText;
-  const part=row.children[1].innerText;
-  const qty=row.children[2].innerText;
-  const next=row.querySelector('.nextP').value;
-  const remark=row.querySelector('.remark').value;
-  if(!remark){ alert("Remark mandatory"); return; }
-  fetch(API_URL,{
-    method:"POST", mode:"no-cors",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
+/* OK ACTION */
+function processOK(btn, current) {
+
+  const row = btn.parentElement.parentElement;
+  const part = row.children[0].innerText;
+  const qty = row.children[1].innerText;
+  const grncoil = row.children[2].innerText;
+  const next = row.querySelector('.nextP').value;
+  const remark = row.querySelector('.remark').value;
+
+  if (!remark) {
+    alert("Remark mandatory");
+    return;
+  }
+
+  fetch(API_URL, {
+    method: "POST",
+    mode: "no-cors",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
       current_process: current,
       next_process: next,
-      batch_no: batch,
       part_no: part,
       quantity: qty,
-      status:"OK",
+      grn_coil_no: grncoil,
+      status: "OK",
       remarks: remark,
       operator: current
     })
   });
+
   row.remove();
 }
 
-function processNG(btn,current){
-  const row=btn.parentElement.parentElement;
-  const batch=row.children[0].innerText;
-  const part=row.children[1].innerText;
-  const qty=row.children[2].innerText;
-  const remark=row.querySelector('.remark').value;
-  if(!remark){ alert("Remark mandatory"); return; }
-  fetch(API_URL,{
-    method:"POST", mode:"no-cors",
-    headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({
+/* NG ACTION */
+function processNG(btn, current) {
+
+  const row = btn.parentElement.parentElement;
+  const part = row.children[0].innerText;
+  const qty = row.children[1].innerText;
+  const grncoil = row.children[2].innerText;
+  const remark = row.querySelector('.remark').value;
+
+  if (!remark) {
+    alert("Remark mandatory for NG");
+    return;
+  }
+
+  fetch(API_URL, {
+    method: "POST",
+    mode: "no-cors",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
       current_process: current,
       next_process: current,
-      batch_no: batch,
       part_no: part,
       quantity: qty,
-      status:"NG",
+      grn_coil_no: grncoil,
+      status: "NG",
       remarks: remark,
       operator: current
     })
   });
+
   row.remove();
 }
 
-function capitalize(s){ return s.charAt(0).toUpperCase()+s.slice(1); }
+function capitalize(s) {
+  return s.charAt(0).toUpperCase() + s.slice(1);
+}
 </script>
 
 </body>
