--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Material Process Tracking</title>
+<title>Material Process Tracking System</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-body { font-family: Arial; background:#f4f6f8; padding:10px; }
-h2 { margin:5px 0; }
+body { font-family: Arial; background:#f2f2f2; padding:10px; }
+h2 { margin:10px 0; }
 .tabs button {
   width:100%;
   padding:8px;
   margin:2px 0;
   border:none;
+  background:#ccc;
   cursor:pointer;
-  background:#d0d0d0;
 }
 .tabs button.active {
   background:#2c3e50;
-  color:#fff;
+  color:white;
 }
 .tab {
   display:none;
-  background:#fff;
+  background:white;
   padding:10px;
   margin-top:10px;
 }
@@ -31,24 +31,18 @@ input, select, button {
   padding:6px;
   margin:4px 0;
 }
-button {
+button.action {
   background:#2c3e50;
-  color:#fff;
-  border:none;
-  cursor:pointer;
+  color:white;
 }
 table {
   width:100%;
   border-collapse:collapse;
-  margin-top:10px;
 }
 th, td {
-  border:1px solid #ccc;
+  border:1px solid #aaa;
   padding:6px;
   text-align:center;
-}
-.action select, .action input {
-  margin-bottom:4px;
 }
 </style>
 </head>
@@ -60,209 +54,157 @@ th, td {
 <div class="tabs">
   <button class="active" onclick="openTab('production',this)">Production</button>
   <button onclick="openTab('tempering',this)">Tempering</button>
-  <button onclick="openTab('cleaning',this)">Cleaning</button>
-  <button onclick="openTab('vibro',this)">Vibro</button>
-  <button onclick="openTab('plating',this)">Plating</button>
-  <button onclick="openTab('sorting',this)">Sorting</button>
   <button onclick="openTab('qa',this)">QA</button>
+  <button onclick="openTab('packing',this)">Packing</button>
 </div>
 
 <!-- ================= PRODUCTION ================= -->
 <div id="production" class="tab" style="display:block">
-  <h3>Production Release</h3>
+<h3>Production Release</h3>
 
-  <input id="part" placeholder="Part No">
-  <input id="workOrder" placeholder="Work Order No">
-  <input id="machine" placeholder="Machine No">
-  <input id="qty" type="number" placeholder="Quantity">
-  <input id="plant" placeholder="Plant">
-  <input id="shift" placeholder="Shift">
-  <input id="grncoil" placeholder="GRN / Coil No">
+<input id="part" placeholder="Part No">
+<input id="workOrder" placeholder="Work Order No">
+<input id="machine" placeholder="Machine No">
+<input id="qty" type="number" placeholder="Quantity">
+<input id="plant" placeholder="Plant">
+<input id="shift" placeholder="Shift">
+<input id="grncoil" placeholder="GRN / Coil No">
 
-  <label>Next Process</label>
-  <select id="nextProcess">
-    <option>Tempering</option>
-    <option>Cleaning</option>
-    <option>Vibro</option>
-    <option>Plating</option>
-    <option>Sorting</option>
-    <option>QA</option>
-  </select>
+<label>Next Process</label>
+<select id="nextProcess">
+  <option>Tempering</option>
+  <option>QA</option>
+</select>
 
-  <label>Handling Type</label>
-  <select id="handlingType">
-    <option>Bin</option>
-    <option>Bag</option>
-  </select>
+<label>Handling Type</label>
+<select id="handlingType">
+  <option>Bin</option>
+  <option>Bag</option>
+</select>
 
-  <input id="handlingQty" type="number" placeholder="Qty per Bin / Bag">
-  <input id="handlingCount" type="number" placeholder="No. of Bins / Bags">
+<input id="handlingQty" placeholder="Qty per Bin / Bag">
+<input id="handlingCount" placeholder="No. of Bins / Bags">
 
-  <button onclick="releaseProduction()">Release to Next Process</button>
+<button class="action" onclick="releaseProduction()">Release</button>
 </div>
 
-<!-- ================= PROCESS TABS ================= -->
-<div id="tempering" class="tab"><h3>Tempering</h3><table id="temperingTable"></table></div>
-<div id="cleaning" class="tab"><h3>Cleaning</h3><table id="cleaningTable"></table></div>
-<div id="vibro" class="tab"><h3>Vibro</h3><table id="vibroTable"></table></div>
-<div id="plating" class="tab"><h3>Plating</h3><table id="platingTable"></table></div>
-<div id="sorting" class="tab"><h3>Sorting</h3><table id="sortingTable"></table></div>
-<div id="qa" class="tab"><h3>QA</h3><table id="qaTable"></table></div>
+<!-- ================= TEMPERING ================= -->
+<div id="tempering" class="tab">
+<h3>Tempering</h3>
+<table id="temperingTable"></table>
+</div>
+
+<!-- ================= QA ================= -->
+<div id="qa" class="tab">
+<h3>QA</h3>
+<table id="qaTable"></table>
+</div>
+
+<!-- ================= PACKING ================= -->
+<div id="packing" class="tab">
+<h3>Packing (Pending)</h3>
+<table id="packingTable"></table>
+</div>
 
 <script>
-/* 🔴 YOUR NEW APPS SCRIPT URL */
+/* 🔴 APPS SCRIPT URL */
 const API_URL =
-"https://script.google.com/macros/s/AKfycby3cdEKlXXZcVoA2BedPLKIaelNf9EREfghqAAao9uBZ0LKybYp2iwmMLltL5Smsrpq/exec";
+"https://script.google.com/macros/s/AKfycbwkqqSuT0h-59YaTWueNI05qExZ5w8BZI-E1R2LKMK43-7pedBEmCYb3BB_aE6zXi8h/exec";
 
 /* TAB SWITCH */
 function openTab(id, btn) {
-  document.querySelectorAll('.tab').forEach(t => t.style.display = "none");
-  document.getElementById(id).style.display = "block";
-  document.querySelectorAll('.tabs button').forEach(b => b.classList.remove("active"));
+  document.querySelectorAll('.tab').forEach(t => t.style.display="none");
+  document.getElementById(id).style.display="block";
+  document.querySelectorAll('.tabs button').forEach(b=>b.classList.remove("active"));
   btn.classList.add("active");
 
-  if (id !== "production") {
-    loadProcess(capitalize(id), id + "Table");
-  }
+  if (id==="tempering") loadProcess("Tempering","temperingTable");
+  if (id==="qa") loadProcess("QA","qaTable");
+  if (id==="packing") loadProcess("Packing","packingTable");
 }
 
 /* PRODUCTION RELEASE */
 function releaseProduction() {
-
-  fetch(API_URL, {
-    method: "POST",
-    mode: "no-cors",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      current_process: "Production",
-      next_process: nextProcess.value,
-
-      part_no: part.value,
-      work_order_no: workOrder.value,
-      machine_no: machine.value,
-      quantity: qty.value,
-      plant: plant.value,
-      shift: shift.value,
-      grn_coil_no: grncoil.value,
-
-      handling_type: handlingType.value,
-      handling_qty: handlingQty.value,
-      handling_count: handlingCount.value,
-
-      status: "OK",
-      operator: "Production",
-      remarks: ""
+  fetch(API_URL,{
+    method:"POST",
+    mode:"no-cors",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({
+      current_process:"Production",
+      next_process:nextProcess.value,
+      part_no:part.value,
+      work_order_no:workOrder.value,
+      machine_no:machine.value,
+      quantity:qty.value,
+      plant:plant.value,
+      shift:shift.value,
+      grn_coil_no:grncoil.value,
+      handling_type:handlingType.value,
+      handling_qty:handlingQty.value,
+      handling_count:handlingCount.value,
+      status:"OK",
+      operator:"Production",
+      remarks:""
     })
   });
-
-  alert("Released to " + nextProcess.value);
+  alert("Released");
 }
 
-/* LOAD DATA FROM EXCEL */
+/* LOAD DATA */
 function loadProcess(process, tableId) {
-
-  fetch(API_URL + "?process=" + process)
-    .then(r => r.json())
-    .then(rows => {
-
-      const table = document.getElementById(tableId);
-      table.innerHTML =
+  fetch(API_URL+"?process="+process)
+    .then(r=>r.json())
+    .then(rows=>{
+      const table=document.getElementById(tableId);
+      table.innerHTML=
         "<tr><th>Part</th><th>Qty</th><th>GRN/Coil</th><th>Action</th></tr>";
 
-      rows.forEach(r => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
+      rows.forEach(r=>{
+        const tr=document.createElement("tr");
+        tr.innerHTML=`
           <td>${r.Part_No}</td>
           <td>${r.Quantity}</td>
           <td>${r.GRN_Coil_No}</td>
-          <td class="action">
+          <td>
             <select class="nextP">
-              <option>Cleaning</option>
-              <option>Vibro</option>
-              <option>Plating</option>
-              <option>Sorting</option>
-              <option>QA</option>
-              <option>Packing</option>
+              ${process==="QA" ? "<option>Packing</option>" : "<option>QA</option>"}
             </select>
-            <input class="remark" placeholder="Remark (mandatory)">
-            <button onclick="processOK(this,'${process}')">OK</button>
-            <button onclick="processNG(this,'${process}')">NG</button>
-          </td>
-        `;
+            <input class="remark" placeholder="Remark mandatory">
+            <button class="action" onclick="processOK(this,'${process}')">OK</button>
+          </td>`;
         table.appendChild(tr);
       });
     });
 }
 
 /* OK ACTION */
-function processOK(btn, current) {
+function processOK(btn,current){
+  const row=btn.parentElement.parentElement;
+  const part=row.children[0].innerText;
+  const qty=row.children[1].innerText;
+  const grn=row.children[2].innerText;
+  const next=row.querySelector(".nextP").value;
+  const remark=row.querySelector(".remark").value;
 
-  const row = btn.parentElement.parentElement;
-  const part = row.children[0].innerText;
-  const qty = row.children[1].innerText;
-  const grncoil = row.children[2].innerText;
-  const next = row.querySelector('.nextP').value;
-  const remark = row.querySelector('.remark').value;
+  if(!remark){ alert("Remark mandatory"); return; }
 
-  if (!remark) {
-    alert("Remark mandatory");
-    return;
-  }
-
-  fetch(API_URL, {
-    method: "POST",
-    mode: "no-cors",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      current_process: current,
-      next_process: next,
-      part_no: part,
-      quantity: qty,
-      grn_coil_no: grncoil,
-      status: "OK",
-      remarks: remark,
-      operator: current
+  fetch(API_URL,{
+    method:"POST",
+    mode:"no-cors",
+    headers:{ "Content-Type":"application/json" },
+    body:JSON.stringify({
+      current_process:current,
+      next_process:next,
+      part_no:part,
+      quantity:qty,
+      grn_coil_no:grn,
+      status:"OK",
+      operator:current,
+      remarks:remark
     })
   });
 
   row.remove();
-}
-
-/* NG ACTION */
-function processNG(btn, current) {
-
-  const row = btn.parentElement.parentElement;
-  const part = row.children[0].innerText;
-  const qty = row.children[1].innerText;
-  const grncoil = row.children[2].innerText;
-  const remark = row.querySelector('.remark').value;
-
-  if (!remark) {
-    alert("Remark mandatory for NG");
-    return;
-  }
-
-  fetch(API_URL, {
-    method: "POST",
-    mode: "no-cors",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      current_process: current,
-      next_process: current,
-      part_no: part,
-      quantity: qty,
-      grn_coil_no: grncoil,
-      status: "NG",
-      remarks: remark,
-      operator: current
-    })
-  });
-
-  row.remove();
-}
-
-function capitalize(s) {
-  return s.charAt(0).toUpperCase() + s.slice(1);
 }
 </script>
 
