--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ th, td {
 </div>
 
 <!-- ================= PACKING ================= -->
-<div id="packing" class="tab">
+<div id="packing" class="tab" style="display:block">
 <h3>Packing (Pending)</h3>
 <table id="packingTable"></table>
 </div>
