--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ input,select{width:100%;padding:6px}
 <div id="content"></div>
 
 <script>
-const SCRIPT_URL = "PASTE_YOUR_NEW_SCRIPT_URL_HERE";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxpIcBlqoiZ2Qu9wZYCAS9Fvrnqh3QE-FltGrw_2_wHSa4gwCQnf8CJsh4DZPo3L_V2/exec";
 
 const PROCESSES = [
  "Production","Tempering","Cleaning","Vibro",
